--- a/index.html
+++ b/index.html
@@ -10,18 +10,33 @@
 </head>
 <body>
 	<!--Menu-->
+	<nav id="nav">
+		<a href=""><i class="fa fa-diamond"></i> Lenrique</a>
+		<div class="nav-link">
+			<a href=""><i class="fa fa-facebook"></i></a>
+			<a href="">Empleo</a>
+			<a href="">Belleza</a>
+			<a href="">Salud</a>
+			<a href="">Contacto <i class="fa fa-envelope"></i></a>
+		</div>
+	</nav>
 	<header>
-		<nav>
-			<a href=""><i class="fa fa-diamond"></i> Lenrique</a>
-			<div class="nav-link">
-				<a href="">Empleo</a>
-				<a href="">Salud</a>
-				<a href="">Contacto</a>
+		<div class="home" id="home">
+			<div>
+				<!--<h1 class="title">Jovenes Admirables</h1>-->
 			</div>
-		</nav>
-		<div class="home">
-			<img src="public/img/bg.png">
-			
+			<div class="content">
+				<img src="public/img/img-empleo.png" alt="">
+				<a href="" class="btn-bg btn-warning">Empleo</a>
+			</div>	
+			<div class="content">
+				<img src="public/img/img-salud.png" alt="">
+				<a href="" class="btn-bg btn-warning">Salud</a>
+			</div>
+			<div class="content">
+				<img src="public/img/img-belleza.png" alt="">
+				<a href="" class="btn-bg btn-warning">Belleza</a>
+			</div>
 		</div>
 	</header>
 	<!--Contenido-->
@@ -211,5 +226,8 @@
 	<footer>
 		2016 <a href="https://www.facebook.com/LuisGuatemalaMtz">Luis Enrique Guatemala Martínez</a>
 	</footer>
+	<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+	<script src="public/js/nicescroll.min.js"></script>
+	<script src="public/js/main.js"></script>
 </body>
 </html>
