Creacion de pagina empleo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<a href=""><i class="fa fa-diamond"></i> Lenrique</a>
 		<div class="nav-link">
 			<a href=""><i class="fa fa-facebook"></i></a>
-			<a href="">Empleo</a>
+			<a href="templates/empleo.html">Empleo</a>
 			<a href="">Belleza</a>
 			<a href="">Salud</a>
 			<a href="">Contacto <i class="fa fa-envelope"></i></a>
@@ -27,201 +27,18 @@
 			</div>
 			<div class="content">
 				<img src="public/img/img-empleo.png" alt="">
-				<a href="" class="btn-bg btn-warning">Empleo</a>
+				<a href="templates/empleo.html" class="btn-bg btn-warning">Empleo</a>
 			</div>	
-			<div class="content">
+			<!--<div class="content">
 				<img src="public/img/img-salud.png" alt="">
 				<a href="" class="btn-bg btn-warning">Salud</a>
-			</div>
+			</div>-->
 			<div class="content">
 				<img src="public/img/img-belleza.png" alt="">
 				<a href="" class="btn-bg btn-warning">Belleza</a>
 			</div>
 		</div>
 	</header>
-	<!--Contenido-->
-	<section class="section">
-		<article>
-			<img src="public/img/img2.jpg">
-			<div class="article-header">
-				<span><i class="fa fa-thumbs-up"></i> 2</span>
-				<span><i class="fa fa-clock-o"></i> 19 Jun 15</span>
-				<div class="badges">
-					<span class="badge bg-success">Empleo</span>
-					<span class="badge bg-default">Dinero</span>
-				</div>
-			</div>
-			<div class="description">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-				<a href="" class="btn btn-default">Ver post</a>
-			</div>
-		</article>
-		<article>
-			<img src="public/img/img1.jpg">
-			<div class="article-header">
-				<span><i class="fa fa-thumbs-up"></i> 2</span>
-				<span><i class="fa fa-clock-o"></i> 19 Jun 15</span>
-				<div class="badges">
-					<span class="badge bg-primary">Salud</span>
-					<span class="badge bg-success">Empleo</span>
-				</div>
-			</div>
-			<div class="description">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-				<a href="" class="btn btn-default">Ver post</a>
-			</div>
-		</article>
-		<article>
-			<img src="public/img/img3.jpg">
-			<div class="article-header">
-				<span><i class="fa fa-thumbs-up"></i> 2</span>
-				<span><i class="fa fa-clock-o"></i> 19 Jun 15</span>
-				<div class="badges">
-					<span class="badge bg-primary">Salud</span>
-				</div>
-			</div>
-			<div class="description">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-				<a href="" class="btn btn-default">Ver post </a>
-			</div>
-		</article>
-		<article>
-			<img src="public/img/img5.png">
-			<div class="article-header">
-				<span><i class="fa fa-thumbs-up"></i> 2</span>
-				<span><i class="fa fa-clock-o"></i> 19 Jun 15</span>
-				<div class="badges">
-					<span class="badge bg-success">Empleo</span>
-					<span class="badge bg-default">Dinero</span>
-				</div>
-			</div>
-			<div class="description">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-				<a href="" class="btn btn-default">Ver post </a>
-			</div>
-		</article>
-		<article>
-			<img src="public/img/img4.jpg">
-			<div class="article-header">
-				<span><i class="fa fa-thumbs-up"></i> 2</span>
-				<span><i class="fa fa-clock-o"></i> 19 Jun 15</span>
-				<div class="badges">
-					<span class="badge bg-primary">Salud</span>
-					<span class="badge bg-success">Empleo</span>
-				</div>
-			</div>
-			<div class="description">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-				<a href="" class="btn btn-default">Ver post </a>
-			</div>
-		</article>
-		<article>
-			<img src="public/img/img2.jpg">
-			<div class="article-header">
-				<span><i class="fa fa-thumbs-up"></i> 2</span>
-				<span><i class="fa fa-clock-o"></i> 19 Jun 15</span>
-				<div class="badges">
-					<span class="badge bg-primary">Salud</span>
-					<span class="badge bg-default">Dinero</span>
-				</div>
-			</div>
-			<div class="description">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-				<a href="" class="btn btn-default">Ver post </a>
-			</div>
-		</article>
-		<article>
-			<img src="public/img/img1.jpg">
-			<div class="article-header">
-				<span><i class="fa fa-thumbs-up"></i> 4599</span>
-				<span><i class="fa fa-clock-o"></i> 19 Jun 15</span>
-				<div class="badges">
-					<span class="badge bg-success">Empleo</span>
-				</div>
-			</div>
-			<div class="description">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-				<a href="" class="btn btn-default">Ver post </a>
-			</div>
-		</article>
-		<article>
-			<img src="public/img/img3.jpg">
-			<div class="article-header">
-				<span><i class="fa fa-thumbs-up"></i> 1</span>
-				<span><i class="fa fa-clock-o"></i> 19 Jun 15</span>
-				<div class="badges">
-					<span class="badge bg-primary">Salud</span>
-					<span class="badge bg-success">Empleo</span>
-					<span class="badge bg-default">Dinero</span>
-				</div>
-			</div>
-			<div class="description">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-				<a href="" class="btn btn-default">Ver post </a>
-			</div>
-		</article>
-		<article>
-			<img src="public/img/img5.png">
-			<div class="article-header">
-				<span><i class="fa fa-thumbs-up"></i> 65</span>
-				<span><i class="fa fa-clock-o"></i> 19 Jun 15</span>
-				<div class="badges">
-					<span class="badge bg-primary">Salud</span>
-					<span class="badge bg-success">Empleo</span>
-					<span class="badge bg-default">Dinero</span>
-				</div>
-			</div>
-			<div class="description">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-				<a href="" class="btn btn-default">Ver post </a>
-			</div>
-		</article>
-		<article>
-			<img src="public/img/img4.jpg">
-			<div class="article-header">
-				<span><i class="fa fa-thumbs-up"></i> 278</span>
-				<span><i class="fa fa-clock-o"></i> 19 Jun 15</span>
-				<div class="badges">
-					<span class="badge bg-primary">Salud</span>
-					<span class="badge bg-success">Empleo</span>
-					<span class="badge bg-default">Dinero</span>
-				</div>
-			</div>
-			<div class="description">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-				<a href="" class="btn btn-default">Ver post </a>
-			</div>
-		</article>
-		<article>
-			<img src="public/img/img6.jpg">
-			<div class="article-header">
-				<span><i class="fa fa-thumbs-up"></i> 2</span>
-				<span><i class="fa fa-clock-o"></i> 19 Jun 15</span>
-				<div class="badges">
-					<span class="badge bg-primary">Salud</span>
-				</div>
-			</div>
-			<div class="description">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-				<a href="" class="btn btn-default">Ver post </a>
-			</div>
-		</article>
-		<article>
-			<img src="public/img/img2.jpg">
-			<div class="article-header">
-				<span><i class="fa fa-thumbs-up"></i> 1500</span>
-				<span><i class="fa fa-clock-o"></i> 19 Jun 15</span>
-				<div class="badges">
-					<span class="badge bg-success">Empleo</span>
-					<span class="badge bg-default">Dinero</span>
-				</div>
-			</div>
-			<div class="description">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-				<a href="" class="btn btn-default">Ver post </a>
-			</div>
-		</article>
-	</section>
 	<!--Footer-->
 	<footer>
 		2016 <a href="https://www.facebook.com/LuisGuatemalaMtz">Luis Enrique Guatemala Martínez</a>
